implement busStopes delete functionality
